--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,22 @@
 }
 
 .maxWidthWrapper {
+  max-width: 1024px;
+  position: relative;
+  /* overflow-y: scroll; */
+}
+
+.backgroundSecondTone {
+  width: 100%;
+  height: 40%;
+  background-color: hsl(195deg, 20%, 86%);
+  position: fixed;
+  bottom: 0px
 }
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,7 +36,42 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 50px; 
+  right: 150px;
+  width: 30%;
+  min-height: 500px;
 }
 
 .controlColumn {
+  max-width: 50%;
+}
+
+@media(max-width: 400px){
+  .characterEditor {
+    padding-top: 32px;
+    padding-bottom: 64px;
+  }
+  .maxWidthWrapper {
+    padding: 10px;
+    max-width: 100%;
+  /* overflow-y: scroll; */
+  }
+  .header {
+    visibility:hidden;
+  }
+  .controlColumn {
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    overflow-x: scroll;
+    flex-wrap: nowrap;
+  }
+  .characterWrapper {
+    position: fixed;
+    top: 32px; 
+    left: 50px;
+    width: 25%;
+    min-height: 500px;
+  }
 }
