--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -12,6 +12,14 @@
   margin-bottom: 32px;
 }
 
+@media(max-width: 400px){
+  .controlPane {
+    width: fit-content;
+    margin-right: 25px;
+    z-index: 1
+  }
+}
+
 .title {
   margin: 0;
   /* Optical centering */
@@ -24,3 +32,5 @@
   font-weight: 400;
   color: hsl(0deg, 0%, 30%);
 }
+
+
